cdk.out/mystique-attire-predictor.template.json
{
  "Resources": {
    "fargateClusterId3E765032": {
      "Type": "AWS::ECS::Cluster",
      "Metadata": {
        "aws:cdk:path": "mystique-attire-predictor/fargateClusterId/Resource"
      }
    },
    "weatherTaskDefIdTaskRole8643F5FF": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "mystique-attire-predictor/weatherTaskDefId/TaskRole/Resource"
      }
    },
    "weatherTaskDefId2BD4FE7C": {
      "Type": "AWS::ECS::TaskDefinition",
      "Properties": {
        "ContainerDefinitions": [
          {
            "Cpu": 256,
            "EntryPoint": [
              "gunicorn",
              "--bind",
              "0.0.0.0:80",
              "--bind",
              "0.0.0.0:443",
              "wsgi:application",
              "--access-logfile",
              "-",
              "--error-logfile",
              "-",
              "--capture-output",
              "--enable-stdio-inheritance"
            ],
            "Environment": [
              {
                "Name": "PLATFORM",
                "Value": "Mystikal Fargate World :-)"
              }
            ],
            "Essential": true,
            "Image": "mystique/predict-attire-for-weather",
            "LogConfiguration": {
              "LogDriver": "awslogs",
              "Options": {
                "awslogs-group": {
                  "Ref": "weatherTaskDefIdweatherContainerLogGroupE5F5C357"
                },
                "awslogs-stream-prefix": "Mystique",
                "awslogs-region": "us-east-1"
              }
            },
            "Memory": 256,
            "Name": "weatherContainer",
            "PortMappings": [
              {
                "ContainerPort": 80,
                "Protocol": "tcp"
              },
              {
                "ContainerPort": 443,
                "Protocol": "tcp"
              }
            ]
          }
        ],
        "Cpu": "256",
        "ExecutionRoleArn": {
          "Fn::GetAtt": [
            "weatherTaskDefIdExecutionRoleCF432FB2",
            "Arn"
          ]
        },
        "Family": "mystiqueattirepredictorweatherTaskDefIdEFFF84D0",
        "Memory": "512",
        "NetworkMode": "awsvpc",
        "RequiresCompatibilities": [
          "FARGATE"
        ],
        "TaskRoleArn": {
          "Fn::GetAtt": [
            "weatherTaskDefIdTaskRole8643F5FF",
            "Arn"
          ]
        }
      },
      "Metadata": {
        "aws:cdk:path": "mystique-attire-predictor/weatherTaskDefId/Resource"
      }
    },
    "weatherTaskDefIdweatherContainerLogGroupE5F5C357": {
      "Type": "AWS::Logs::LogGroup",
      "UpdateReplacePolicy": "Retain",
      "DeletionPolicy": "Retain",
      "Metadata": {
        "aws:cdk:path": "mystique-attire-predictor/weatherTaskDefId/weatherContainer/LogGroup/Resource"
      }
    },
    "weatherTaskDefIdExecutionRoleCF432FB2": {
      "Type": "AWS::IAM::Role",
      "Properties": {
        "AssumeRolePolicyDocument": {
          "Statement": [
            {
              "Action": "sts:AssumeRole",
              "Effect": "Allow",
              "Principal": {
                "Service": "ecs-tasks.amazonaws.com"
              }
            }
          ],
          "Version": "2012-10-17"
        }
      },
      "Metadata": {
        "aws:cdk:path": "mystique-attire-predictor/weatherTaskDefId/ExecutionRole/Resource"
      }
    },
    "weatherTaskDefIdExecutionRoleDefaultPolicy022455D7": {
      "Type": "AWS::IAM::Policy",
      "Properties": {
        "PolicyDocument": {
          "Statement": [
            {
              "Action": [
                "logs:CreateLogStream",
                "logs:PutLogEvents"
              ],
              "Effect": "Allow",
              "Resource": {
                "Fn::GetAtt": [
                  "weatherTaskDefIdweatherContainerLogGroupE5F5C357",
                  "Arn"
                ]
              }
            }
          ],
          "Version": "2012-10-17"
        },
        "PolicyName": "weatherTaskDefIdExecutionRoleDefaultPolicy022455D7",
        "Roles": [
          {
            "Ref": "weatherTaskDefIdExecutionRoleCF432FB2"
          }
        ]
      },
      "Metadata": {
        "aws:cdk:path": "mystique-attire-predictor/weatherTaskDefId/ExecutionRole/DefaultPolicy/Resource"
      }
    },
    "weatherServiceIdLB9860DC09": {
      "Type": "AWS::ElasticLoadBalancingV2::LoadBalancer",
      "Properties": {
        "Scheme": "internet-facing",
        "SecurityGroups": [
          {
            "Fn::GetAtt": [
              "weatherServiceIdLBSecurityGroupDF78AD35",
              "GroupId"
            ]
          }
        ],
        "Subnets": [
          {
            "Fn::ImportValue": "mystique-attire-predictor-vpc-stack:ExportsOutputRefcustomVpcIdpublicSubnetSubnet1SubnetABC68DEB80823DED"
          },
          {
            "Fn::ImportValue": "mystique-attire-predictor-vpc-stack:ExportsOutputRefcustomVpcIdpublicSubnetSubnet2SubnetBE7713440CC98BBC"
          }
        ],
        "Type": "application"
      },
      "Metadata": {
        "aws:cdk:path": "mystique-attire-predictor/weatherServiceId/LB/Resource"
      }
    },
    "weatherServiceIdLBSecurityGroupDF78AD35": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "Automatically created Security Group for ELB mystiqueattirepredictorweatherServiceIdLB752852E9",
        "SecurityGroupIngress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow from anyone on port 80",
            "FromPort": 80,
            "IpProtocol": "tcp",
            "ToPort": 80
          }
        ],
        "VpcId": {
          "Fn::ImportValue": "mystique-attire-predictor-vpc-stack:ExportsOutputRefcustomVpcId909241C79F191090"
        }
      },
      "Metadata": {
        "aws:cdk:path": "mystique-attire-predictor/weatherServiceId/LB/SecurityGroup/Resource"
      }
    },
    "weatherServiceIdLBSecurityGrouptomystiqueattirepredictorweatherServiceIdServiceSecurityGroupA34B85C8801317E173": {
      "Type": "AWS::EC2::SecurityGroupEgress",
      "Properties": {
        "GroupId": {
          "Fn::GetAtt": [
            "weatherServiceIdLBSecurityGroupDF78AD35",
            "GroupId"
          ]
        },
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "DestinationSecurityGroupId": {
          "Fn::GetAtt": [
            "weatherServiceIdServiceSecurityGroup67393204",
            "GroupId"
          ]
        },
        "FromPort": 80,
        "ToPort": 80
      },
      "Metadata": {
        "aws:cdk:path": "mystique-attire-predictor/weatherServiceId/LB/SecurityGroup/to mystiqueattirepredictorweatherServiceIdServiceSecurityGroupA34B85C8:80"
      }
    },
    "weatherServiceIdLBPublicListenerE39B972D": {
      "Type": "AWS::ElasticLoadBalancingV2::Listener",
      "Properties": {
        "DefaultActions": [
          {
            "TargetGroupArn": {
              "Ref": "weatherServiceIdLBPublicListenerECSGroup74A984B0"
            },
            "Type": "forward"
          }
        ],
        "LoadBalancerArn": {
          "Ref": "weatherServiceIdLB9860DC09"
        },
        "Port": 80,
        "Protocol": "HTTP"
      },
      "Metadata": {
        "aws:cdk:path": "mystique-attire-predictor/weatherServiceId/LB/PublicListener/Resource"
      }
    },
    "weatherServiceIdLBPublicListenerECSGroup74A984B0": {
      "Type": "AWS::ElasticLoadBalancingV2::TargetGroup",
      "Properties": {
        "Port": 80,
        "Protocol": "HTTP",
        "TargetType": "ip",
        "VpcId": {
          "Fn::ImportValue": "mystique-attire-predictor-vpc-stack:ExportsOutputRefcustomVpcId909241C79F191090"
        }
      },
      "Metadata": {
        "aws:cdk:path": "mystique-attire-predictor/weatherServiceId/LB/PublicListener/ECSGroup/Resource"
      }
    },
    "weatherServiceIdService360B5D1F": {
      "Type": "AWS::ECS::Service",
      "Properties": {
        "Cluster": {
          "Ref": "fargateClusterId3E765032"
        },
        "DeploymentConfiguration": {
          "MaximumPercent": 200,
          "MinimumHealthyPercent": 50
        },
        "DesiredCount": 2,
        "EnableECSManagedTags": false,
        "HealthCheckGracePeriodSeconds": 60,
        "LaunchType": "FARGATE",
        "LoadBalancers": [
          {
            "ContainerName": "weatherContainer",
            "ContainerPort": 80,
            "TargetGroupArn": {
              "Ref": "weatherServiceIdLBPublicListenerECSGroup74A984B0"
            }
          }
        ],
        "NetworkConfiguration": {
          "AwsvpcConfiguration": {
            "AssignPublicIp": "DISABLED",
            "SecurityGroups": [
              {
                "Fn::GetAtt": [
                  "weatherServiceIdServiceSecurityGroup67393204",
                  "GroupId"
                ]
              }
            ],
            "Subnets": [
              {
                "Fn::ImportValue": "mystique-attire-predictor-vpc-stack:ExportsOutputRefcustomVpcIdappSubnetSubnet1Subnet1C87506BFC8A7D99"
              },
              {
                "Fn::ImportValue": "mystique-attire-predictor-vpc-stack:ExportsOutputRefcustomVpcIdappSubnetSubnet2Subnet367D8F1AF55616AA"
              }
            ]
          }
        },
        "ServiceName": "weatherService",
        "TaskDefinition": {
          "Ref": "weatherTaskDefId2BD4FE7C"
        }
      },
      "DependsOn": [
        "weatherServiceIdLBPublicListenerECSGroup74A984B0",
        "weatherServiceIdLBPublicListenerE39B972D"
      ],
      "Metadata": {
        "aws:cdk:path": "mystique-attire-predictor/weatherServiceId/Service/Service"
      }
    },
    "weatherServiceIdServiceSecurityGroup67393204": {
      "Type": "AWS::EC2::SecurityGroup",
      "Properties": {
        "GroupDescription": "mystique-attire-predictor/weatherServiceId/Service/SecurityGroup",
        "SecurityGroupEgress": [
          {
            "CidrIp": "0.0.0.0/0",
            "Description": "Allow all outbound traffic by default",
            "IpProtocol": "-1"
          }
        ],
        "VpcId": {
          "Fn::ImportValue": "mystique-attire-predictor-vpc-stack:ExportsOutputRefcustomVpcId909241C79F191090"
        }
      },
      "Metadata": {
        "aws:cdk:path": "mystique-attire-predictor/weatherServiceId/Service/SecurityGroup/Resource"
      }
    },
    "weatherServiceIdServiceSecurityGroupfrommystiqueattirepredictorweatherServiceIdLBSecurityGroup6F780715804CE11137": {
      "Type": "AWS::EC2::SecurityGroupIngress",
      "Properties": {
        "IpProtocol": "tcp",
        "Description": "Load balancer to target",
        "FromPort": 80,
        "GroupId": {
          "Fn::GetAtt": [
            "weatherServiceIdServiceSecurityGroup67393204",
            "GroupId"
          ]
        },
        "SourceSecurityGroupId": {
          "Fn::GetAtt": [
            "weatherServiceIdLBSecurityGroupDF78AD35",
            "GroupId"
          ]
        },
        "ToPort": 80
      },
      "Metadata": {
        "aws:cdk:path": "mystique-attire-predictor/weatherServiceId/Service/SecurityGroup/from mystiqueattirepredictorweatherServiceIdLBSecurityGroup6F780715:80"
      }
    }
  },
  "Outputs": {
    "ClusterNameOutput": {
      "Value": {
        "Ref": "fargateClusterId3E765032"
      },
      "Export": {
        "Name": "ClusterName"
      }
    },
    "weatherServiceIdLoadBalancerDNS5C79F75F": {
      "Value": {
        "Fn::GetAtt": [
          "weatherServiceIdLB9860DC09",
          "DNSName"
        ]
      }
    },
    "weatherServiceIdServiceURLC004666A": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "http://",
            {
              "Fn::GetAtt": [
                "weatherServiceIdLB9860DC09",
                "DNSName"
              ]
            }
          ]
        ]
      }
    },
    "WeatherServiceUrl": {
      "Value": {
        "Fn::Join": [
          "",
          [
            "http://",
            {
              "Fn::GetAtt": [
                "weatherServiceIdLB9860DC09",
                "DNSName"
              ]
            }
          ]
        ]
      }
    }
  }
}
